# python-design-patterns

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflow/: tests.yaml
.github/workflows/: tests.yaml  tests.yml
python_design_patterns/: __init__.py  _version.py  factory_method.py  singleton.py
python_design_patterns/logs/: logs.py
tests/: conftest.py  test_factory_method.py
